resources/public/style.css
/* ... */
.chatban-history table {
    margin: 7px;
}

.chatban-history th {
    text-align: right;
    font-weight: bold;
    margin-right: .5em;
}


.panel-trigger .ping-counter {
    position: absolute;
    bottom: 0;
    left: 0;
    transform: translateY(-55%) translateX(-45%);
    padding: 1px 5px;
    border-radius: 5px;
    font-size: 1rem;
    font-weight: bold;
    color: #ffa500;
    color: var(--ping-counter-color);
}

.panel-trigger:not(.has-ping) .ping-counter {
    display: none;
}

.panel-trigger.has-ping {
    margin-left: 6px;
}

.popup ul.pings-list {
    width: 100%;
    max-height: 73vh;
    list-style: none;
    margin: 0;
    padding: .5rem;
    overflow-y: auto;
}

.popup .pings-list:empty::before {
    content: "No pings here";
    position: absolute;
    display: block;
    text-align: center;
    color: #8c8c8c;
    color: var(--text-muted-color);
}

.popup .pings-list li {
    font-family: monospace;
}

.username-color-picker {
    font-family: monospace;
    font-size: 1.25rem;
    padding: 5px;
    border-radius: 5px;
}

.username-color-picker.rainbow {
    background-color: black;
    text-shadow: 0 0 0.5em black;
    color: white;
}

@keyframes rainbow-transition-bg {
    0% { background-color: violet; }
    14% { background-color: #308dff; }
    28% { background-color: aqua; }
    42% { background-color: green; }
    56% { background-color: yellow; }
    70% { background-color: orange; }
    84% { background-color: red; }
    98%, 100% { background-color: violet; }
}

.username-color-picker option.rainbow {
    animation: rainbow-transition-bg 4s linear infinite;
    background-color: violet;
}

.user.rainbow {
    display: inline-block;
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent !important;
    color: transparent !important;
    text-shadow: none !important;
}

/* preselecting body makes this a more specific selector than the built-in one which would normally override this since it's inline */
/* the same principle is why each of the following preselect .emoji-picker */
body .emoji-picker {
    z-index: 22;
    border: 1px solid #999999;
    border: 1px solid var(--emoji-picker-border-color);
    box-shadow: 0px 0px 3px 1px #CCCCCC;
    box-shadow: 0px 0px 3px 1px var(--emoji-picker-shadow-color);
    background: #FFFFFF;
    background: var(--emoji-picker-background);
}

.emoji-picker img.emoji {
    max-height: 1.3rem;
}

.emoji-picker .emoji-picker__search {
    padding-left: .5em;
}

.emoji-picker .emoji-picker__preview {
    padding-top: 1.75em;
    border-top: 1px solid #999999;
    border-top: 1px solid var(--emoji-picker-border-color);
}

.emoji-picker .emoji-picker__preview-name {
    color: #666666;
    color: var(--emoji-picker-preview-name-text-color);
}

.emoji-picker .emoji-picker__tab {
    color: inherit;
    color: var(--emoji-picker-tab-icon-color);
}

.emoji-picker .emoji-picker__tab.active {
    color: #4F81E5;
    color: var(--emoji-picker-tab-icon-color-selected);
    border-bottom: 3px solid #4F81E5;
    border-bottom: 3px solid var(--emoji-picker-tab-icon-color-selected);
}

.emoji-picker .emoji-picker__tab-body h2 {
    color: #333333;
    color: var(--emoji-picker-section-text-color);
}

.emoji-picker .emoji-picker__emoji {
    color: inherit;
    color: var(--emoji-picker-emoji-color);
    background: transparent;
    background: var(--emoji-picker-emoji-background);
}

.emoji-picker .emoji-picker__emoji:hover {
    background: #E8F4F9;
    background: var(--emoji-picker-emoji-background-hover);
}

.emoji-picker .emoji-picker__search-container input {
    border: 1px solid #CCCCCC;
    border: 1px solid var(--emoji-picker-search-input-border-color);
    background: #fff;
    background: var(--emoji-picker-search-input-background);
    color: #000;
    color: var(--emoji-picker-search-input-text-color);
}

.emoji-picker .emoji-picker__search-icon {
    color: #CCCCCC;
    color: var(--emoji-picker-search-icon-color);
}

.emoji-picker .emoji-picker__search-not-found {
    color: #666666;
    color: var(--emoji-picker-search-no-results-color);
}

.emoji-picker .emoji-picker__variant-overlay {
    background: rgba(0, 0, 0, 0.7);
    background: var(--emoji-picker-variant-overlay-background);
}

.emoji-picker .emoji-picker__variant-popup {
    background: #FFFFFF;
    background: var(--emoji-picker-variant-popup-background);
}

.emoji-picker .emoji-picker__variant-popup-close-button {
    color: inherit;
    color: var(--emoji-picker-variant-close-button-color)
}

/* CHAT ACTIONS POPUP */

.popup {
    position: absolute;
    z-index: 22;
    border-radius: 5px;
    font-size: 1rem !important;
    line-height: 1rem !important;
    overflow: hidden;
    max-width: 400px;
    min-width: 300px;
}

.popup .details-wrapper {
    width: 65%;
}

.popup .actions-wrapper {
    width: 35%;
    background: #0002;
    background: var(--panel-article-background);
}

.popup .pane {
    display: inline-block;
    vertical-align: top;
}

.popup .pane.pane-full {
    width: 100%;
}

.pane p {
    overflow-wrap: break-word;
    word-wrap: break-word;
    word-break: break-word;
}

.pane ul.actions-list {
    margin: 0;
    padding: 0;
    padding-bottom: .5em;
    list-style: none;
    border-left: 1px solid #000;
    border-left: 1px solid var(--panel-border-color);
}

.pane ul.actions-list li {
    line-height: 2em;
    padding: 0 .5em;
}

.popup-timestamp-header {
    margin: 0;
    padding: 8px 0;
    border-bottom: 1px solid #000;
    border-bottom: 1px solid var(--panel-border-color);
    text-align: center;
}

/* Settings tweaks */
#bubble-position {
    width: 0;
    grid-template: repeat(2, 1fr) / repeat(2, .5fr);
    display: grid;
}

#bubble-position label {
    position: relative;
    width: 55px;
    height: 30px;
}

#bubble-position label > input {
    visibility: hidden;
}
/* ... */

